tests/rosetta/out/Swift/catamorphism.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:56:34Z
func add(_ a: Int, _ b: Int) -> Int {
    return a + b
}
func sub(_ a: Int, _ b: Int) -> Int {
    return a - b
}
func mul(_ a: Int, _ b: Int) -> Int {
    return a * b
}
func fold(_ f: inout (Int, Int) -> Int, _ xs: [Int]) -> Int {
    var r = xs[0]
    var i = 1
    while i < xs.count {
        r = f(r, xs[i])
        i = i + 1
    }
    return r
}
var n = [1, 2, 3, 4, 5]
print(fold(&{ (a: Int, b: Int) -> Int in add(a, b) }, n))
print(fold(&{ (a: Int, b: Int) -> Int in sub(a, b) }, n))
print(fold(&{ (a: Int, b: Int) -> Int in mul(a, b) }, n))
